
== 2011-11-17 ==
  * Enabled mIRC6-compatibility encrypted ACTION (/me) workaround to actually work (incoming messages).
  * Fixed outgoing encrypted /me ACTIONs. They were missing their last character.
  * Proper support of UTF-8 encoded cryptmarks when using no_legacy=1 mode without $chr() workaround.
  * Updated OpenSSL to 1.0.0e

== 2011-03-15 ==
  * Updated FiSH_encrypt_msg and FiSH_decrypt_msg DLL routines (for use from within .mrc scripts)
    to be fully backwards-compatible again (keys with characters >=0x80 were broken).
  * Added FiSH_DecryptMsg10 and FiSH_EncryptMsg10 DLL routines with the following signature:
	  <decode_utf8|raw_bytes> <key> <base64data>
	  Use these if you need to work with UTF-8 encoded keys, e.g.:
	  //echo -a $dll(%FiSH_DLL,FiSH_EncryptMsg10,raw_bytes üütf§KEY message here blah blah)

== 2011-02-12 ==
  * Fixed another syntax error in fish_10.mrc
  * Updated OpenSSL to 1.0.0d

== 2011-02-05 ===
	* Fixed issue 23, identified by ex0a (outgoing crypt mark did not respect process_outgoing default).
	* Added an error message on startup if blow.ini is not writable.
	* Updated OpenSSL to 1.0.0c

== 2010-09-28 ==
	* Fixed issues with no_legacy = 1, most notably encrypt_topic and other contact specific
	  settings being broken.
	* Fixed topic-not-being-decrypted issue with no_legacy=1. Kudos to _pac.

== 2010-08-01 ==
	* Fixed nasty bug that caused FiSH_encrypt_msg to fail with *messages* that contained spaces
	  and FiSH_WriteKey10 with *keys* that contained spaces.
	* Added support for $chr(N) and $+ in mark_encrypted as suggested in bug #13.

== 2010-06-19 ==
	* Final build with multi-network support. Read about it in README. You can now use different keys for
	  channels of the same name on different networks.
	* Added no_legacy setting to blow.ini. Find out about it in README.BLOWINI.
	* Made regular "Set Key" right click menu entry use ANSI mode, like in old FiSH,
	  and added a new entry "Set Key (UTF-8)" in case someone needs it.